--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "intersection-observer": "^0.12.2",
     "jest": "^29.7.0",
     "react-scripts": "^5.0.1",
     "vite": "^5.4.2"
